Added lectures and started task3

--- a/midterm/main.ipynb
+++ b/midterm/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,43 +199,59 @@
    "outputs": [],
    "source": [
     "# Task 2\n",
-    "# Input: A connected undirected graph G = (V, E)\n",
     "import networkx as nw\n",
-    "def shapley_closeness_centrality(G:nw.Graph):\n",
-    "    num_nodes = len(G.nodes())\n",
-    "    shapley_values = [0 for i in G.nodes()]\n",
+    "import math\n",
+    "import pandas as pd\n",
+    "from multiprocessing import Pool, cpu_count\n",
     "\n",
-    "    for s in all_subsets(G.nodes()):\n",
-    "        size_s = len(s)\n",
-    "        if size_s > 1 and size_s < num_nodes:\n",
-    "            for i in range(num_nodes):\n",
-    "                if i not in s:\n",
-    "                    marginal_contribution = (closeness(s + [i], G) - closeness(s, G)) / binom(num_nodes - 1, size_s)\n",
-    "                    shapley_values[i] += marginal_contribution\n",
+    "# Worker function\n",
+    "def worker(subset, G:nw.Graph, num_nodes):\n",
+    "    shapley_values = [0] * num_nodes\n",
+    "    for i in range(num_nodes):\n",
+    "        if i not in subset:\n",
+    "            marginal_contribution = (closeness(subset + [i], G) - closeness(subset, G)) / binom(num_nodes - 1, len(subset))\n",
+    "            shapley_values[i] += marginal_contribution\n",
+    "    return shapley_values\n",
+    "\n",
+    "# Parallel shapley-wilks centrality function\n",
+    "def shapley_closeness_centrality_parallel(G):\n",
+    "    num_nodes = len(G.nodes())\n",
+    "    shapley_values = [0] * num_nodes\n",
+    "\n",
+    "    with Pool(processes=cpu_count()) as p:\n",
+    "        subsets = [s for s in all_subsets(G.nodes()) if len(s) > 1 and len(s) < num_nodes]\n",
+    "        results = p.starmap(worker, [(s, G, num_nodes) for s in subsets])\n",
+    "\n",
+    "    for result in results:\n",
+    "        shapley_values = [x + y for x, y in zip(shapley_values, result)]\n",
     "\n",
     "    return shapley_values\n",
     "\n",
+    "\n",
+    "# Helper function\n",
     "def all_subsets(S):\n",
     "    n = len(S)\n",
     "    for i in range(2 ** n):\n",
-    "        return [S[j] for j in range(n) if (i & (1 << j))]\n",
-    "\n",
+    "        subset = [S[j] for j in range(n) if (i & (1 << j))]\n",
+    "    return subset\n",
     "def closeness(S, G):\n",
     "    total_distance = 0\n",
     "    for i in S:\n",
-    "        distances = nw.dijkstra_path(G,i)\n",
     "        for j in S:\n",
-    "            if i != j:\n",
+    "            if i < j:\n",
+    "                distances = nw.shortest_path(G, i, j)\n",
     "                total_distance += distances[j]\n",
     "    return 1.0 / total_distance\n",
-    "\n",
-    "\n",
     "def binom(n, k):\n",
-    "    pass\n",
-    "    # Compute binomial coefficient of n choose k\n",
-    "    ...\n",
+    "    return math.factorial(n) / (math.factorial(k) * math.factorial(n-k))\n",
+    "    \n",
     "\n",
-    "\n"
+    "G_fb = nw.Graph()\n",
+    "for edge in pd.read_csv('facebook_large/musae_facebook_edges.csv').values:\n",
+    "    G_fb.add_edge(*edge) \n",
+    "\n",
+    "\n",
+    "shapley_values = shapley_closeness_centrality_parallel(G_fb)\n"
    ]
   },
   {
@@ -247,9 +263,81 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Implement the VCG, the MUDAN, and the MUDAR, for selling multiple homogeneous items on a social network, with each agent only requiring a single item. The MUDAN and MUDAR algorithm are available on (Fang et al., 2023)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3755, 4302, 3990]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Task 3\n",
+    "def auction(k, seller_net, reports, bids, type = 'vcg'):\n",
+    "    \"\"\"\n",
+    "- k, is the number of items to sell;\n",
+    "\n",
+    "- seller_net, is a set of strings each identifying a different bidder;\n",
+    "\n",
+    "- reports, is a dictionary whose keys are strings each identifying a different bidder and whose\n",
+    "    values are sets of strings representing the set of bidders to which the bidder identified by the\n",
+    "    key reports the information about the auction;\n",
+    "\n",
+    "- bids, is a dictionary whose keys are strings each identifying a different bidder and whose\n",
+    "    values are numbers defining the bid of the bidder identified by that key.\n",
+    "\n",
+    "- type is the type of auction that is taking place\n",
+    "\n",
+    "Returns:\n",
+    "- allocation, that is a dictionary that has as keys the strings identifying each of the bidders\n",
+    "that submitted a bid, and as value a boolean True if this bidder is allocated one of the items,\n",
+    "and False otherwise.\n",
+    "\n",
+    "- payments, that is a dictionary that has as keys the strings identifying each of the bidders that\n",
+    "submitted a bid, and as value the price that she pays. Here, a positive price means that the bidder\n",
+    "is paying to the seller, while a negative price means that the seller is paying to the bidder.\n",
+    "    \"\"\"\n",
+    "    allocation, payments = dict(),dict()\n",
+    "\n",
+    "    for p in bids:\n",
+    "        bids[p] = [random.randint(0,1000) for x in range(k)]\n",
+    "    \n",
+    "    sw = list(map(sum, zip(*[bids[i] for i in bids])))\n",
+    "\n",
+    "    \n",
+    "    #return allocation, payments\n",
+    "\n",
+    "def vcg():\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "k = 10\n",
+    "seller_net = [\"player \"+str(x) for x in range(1,11)]\n",
+    "reports = {}\n",
+    "bids = {}\n",
+    "for s in seller_net:\n",
+    "    nei = [random.randint(0,len(seller_net)-1) for i in range(random.randint(0,len(seller_net)-1))]\n",
+    "    reports[s] = [seller_net[x] for x in nei if seller_net[x] != s]\n",
+    "    bids[s] = []\n",
+    "\n",
+    "auction(3,seller_net,reports,bids)\n",
+    "\n",
+    "type = 'vcg'"
+   ]
   },
   {
    "attachments": {},
