--- a/midterm/main.ipynb
+++ b/midterm/main.ipynb
@@ -272,21 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3755, 4302, 3990]\n"
+      "None\n"
      ]
     }
    ],
    "source": [
     "# Task 3\n",
-    "def auction(k, seller_net, reports, bids, type = 'vcg'):\n",
-    "    \"\"\"\n",
+    "def auction(k:int, seller_net:list, reports:dict, bids:dict, type = 'vcg'):\n",
+    "    \"\"\" This code assumes that one bidder can be assigned one item\n",
     "- k, is the number of items to sell;\n",
     "\n",
     "- seller_net, is a set of strings each identifying a different bidder;\n",
@@ -309,34 +309,18 @@
     "submitted a bid, and as value the price that she pays. Here, a positive price means that the bidder\n",
     "is paying to the seller, while a negative price means that the seller is paying to the bidder.\n",
     "    \"\"\"\n",
-    "    allocation, payments = dict(),dict()\n",
+    "   \n",
     "\n",
-    "    for p in bids:\n",
-    "        bids[p] = [random.randint(0,1000) for x in range(k)]\n",
-    "    \n",
-    "    sw = list(map(sum, zip(*[bids[i] for i in bids])))\n",
-    "\n",
-    "    \n",
-    "    #return allocation, payments\n",
-    "\n",
-    "def vcg():\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "k = 10\n",
-    "seller_net = [\"player \"+str(x) for x in range(1,11)]\n",
+    "k = 3\n",
+    "seller_net = [\"player \"+str(x) for x in range(1,4)]\n",
     "reports = {}\n",
     "bids = {}\n",
     "for s in seller_net:\n",
     "    nei = [random.randint(0,len(seller_net)-1) for i in range(random.randint(0,len(seller_net)-1))]\n",
     "    reports[s] = [seller_net[x] for x in nei if seller_net[x] != s]\n",
-    "    bids[s] = []\n",
+    "    bids[s] = [random.randint(0,10) for i in range(k)]\n",
     "\n",
-    "auction(3,seller_net,reports,bids)\n",
-    "\n",
-    "type = 'vcg'"
+    "print(auction(k,seller_net,reports,bids))\n"
    ]
   },
   {
