--- a/midterm/main.ipynb
+++ b/midterm/main.ipynb
@@ -285,7 +285,10 @@
    ],
    "source": [
     "# Task 3\n",
-    "def auction(k, seller_net, reports, bids, type = 'vcg'):\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "def auction(k, seller_net, reports, bids, type='vcg'):\n",
     "    \"\"\"\n",
     "- k, is the number of items to sell;\n",
     "\n",
@@ -309,34 +312,57 @@
     "submitted a bid, and as value the price that she pays. Here, a positive price means that the bidder\n",
     "is paying to the seller, while a negative price means that the seller is paying to the bidder.\n",
     "    \"\"\"\n",
-    "    allocation, payments = dict(),dict()\n",
+    "    allocation, payments = dict(), dict()\n",
     "\n",
     "    for p in bids:\n",
-    "        bids[p] = [random.randint(0,1000) for x in range(k)]\n",
-    "    \n",
+    "        bids[p] = [random.randint(0, 1000) for x in range(k)]\n",
+    "\n",
     "    sw = list(map(sum, zip(*[bids[i] for i in bids])))\n",
     "\n",
-    "    \n",
-    "    #return allocation, payments\n",
+    "    # return allocation, payments\n",
+    "\n",
+    "\n",
+    "def allocation(k, bids):\n",
+    "    # initialization\n",
+    "    allocation = {}\n",
+    "    for bidder in bids:\n",
+    "        allocation[bidder] = False\n",
+    "\n",
+    "    for x in range(k):\n",
+    "        winner = list(bids)[0]\n",
+    "        for bidder in bids:\n",
+    "            if bids[bidder][x] > bids[winner][x]:\n",
+    "                winner = bidder\n",
+    "        allocation[winner] = True\n",
+    "\n",
+    "    return allocation\n",
+    "\n",
     "\n",
     "def vcg():\n",
     "    pass\n",
     "\n",
+    "if __name__ == \"__main__\":\n",
+    "    k = 10\n",
+    "    seller_net = [\"player \" + str(x) for x in range(1, 11)]\n",
+    "    # keys inentifying bidder,\n",
+    "    reports = {}\n",
+    "    bids = {}\n",
+    "    for s in seller_net:\n",
+    "        nei = [random.randint(0, len(seller_net) - 1) for i in range(random.randint(0, len(seller_net) - 1))]\n",
+    "        reports[s] = [seller_net[x] for x in nei if seller_net[x] != s]\n",
+    "        bid = [0] * k\n",
+    "        for i in range(k):\n",
+    "            bid[i] = random.randint(0, 100)\n",
+    "        bids[s] = bid\n",
     "\n",
+    "    print(seller_net)\n",
+    "    print(reports)\n",
+    "    print(bids)\n",
     "\n",
+    "    print(allocation(k, bids))\n",
+    "    auction(3, seller_net, reports, bids)\n",
     "\n",
-    "k = 10\n",
-    "seller_net = [\"player \"+str(x) for x in range(1,11)]\n",
-    "reports = {}\n",
-    "bids = {}\n",
-    "for s in seller_net:\n",
-    "    nei = [random.randint(0,len(seller_net)-1) for i in range(random.randint(0,len(seller_net)-1))]\n",
-    "    reports[s] = [seller_net[x] for x in nei if seller_net[x] != s]\n",
-    "    bids[s] = []\n",
-    "\n",
-    "auction(3,seller_net,reports,bids)\n",
-    "\n",
-    "type = 'vcg'"
+    "    type = 'vcg'\n"
    ]
   },
   {
