repaired allocation for vcg and computing of social welfare

--- a/midterm/main.ipynb
+++ b/midterm/main.ipynb
@@ -312,15 +312,41 @@
     "submitted a bid, and as value the price that she pays. Here, a positive price means that the bidder\n",
     "is paying to the seller, while a negative price means that the seller is paying to the bidder.\n",
     "    \"\"\"\n",
-    "    allocation, payments = dict(), dict()\n",
+    "    payments = dict()\n",
+    "\n",
+    "    items = []\n",
+    "    allocated_items = []\n",
+    "    for i in range(k):\n",
+    "        items.append(random.randint(0, 100))\n",
+    "\n",
+    "    items.sort(reverse=True)\n",
+    "\n",
+    "    #print(items)\n",
+    "\n",
+    "    allocation = {}\n",
+    "    for bidder in bids:\n",
+    "        allocation[bidder] = False\n",
     "\n",
     "    for p in bids:\n",
-    "        bids[p] = [random.randint(0, 1000) for x in range(k)]\n",
+    "        bids[p] = [random.randint(0, 100) for x in range(k)]\n",
     "\n",
-    "    sw = list(map(sum, zip(*[bids[i] for i in bids])))\n",
+    "    #allocation\n",
+    "    for i in range(k):\n",
+    "        sorted_bidders = sorted(bids.items(), key=lambda x:x[1][i], reverse=True)\n",
+    "        j = 0\n",
+    "        while allocation[sorted_bidders[j][0]]:\n",
+    "            j += 1\n",
+    "        allocated_items.append(sorted_bidders[j][0])\n",
+    "        allocation[sorted_bidders[j][0]] = True\n",
     "\n",
-    "    # return allocation, payments\n",
+    "    #computing social welfare\n",
+    "    social_welfare = 0\n",
+    "    for i in range(k):\n",
+    "        social_welfare += items[i] * bids[allocated_items[i]][i]\n",
     "\n",
+    "    print(social_welfare)\n",
+    "\n",
+    "    return allocation, payments\n",
     "\n",
     "def allocation(k, bids):\n",
     "    # initialization\n",
@@ -350,19 +376,17 @@
     "    for s in seller_net:\n",
     "        nei = [random.randint(0, len(seller_net) - 1) for i in range(random.randint(0, len(seller_net) - 1))]\n",
     "        reports[s] = [seller_net[x] for x in nei if seller_net[x] != s]\n",
-    "        bid = [0] * k\n",
-    "        for i in range(k):\n",
-    "            bid[i] = random.randint(0, 100)\n",
-    "        bids[s] = bid\n",
+    "        bids[s] = []\n",
     "\n",
     "    print(seller_net)\n",
     "    print(reports)\n",
-    "    print(bids)\n",
+    "    #print(bids)\n",
     "\n",
-    "    print(allocation(k, bids))\n",
+    "    #print(allocation(k, bids))\n",
     "    auction(3, seller_net, reports, bids)\n",
     "\n",
-    "    type = 'vcg'\n"
+    "    type = 'vcg'\n",
+    "\n"
    ]
   },
   {
