--- a/midterm/main.ipynb
+++ b/midterm/main.ipynb
@@ -315,13 +315,10 @@
     "    payments = dict()\n",
     "\n",
     "    items = []\n",
-    "    allocated_items = []\n",
+    "    winners = []\n",
     "    for i in range(k):\n",
     "        items.append(random.randint(0, 100))\n",
-    "\n",
     "    items.sort(reverse=True)\n",
-    "\n",
-    "    #print(items)\n",
     "\n",
     "    allocation = {}\n",
     "    for bidder in bids:\n",
@@ -336,38 +333,41 @@
     "        j = 0\n",
     "        while allocation[sorted_bidders[j][0]]:\n",
     "            j += 1\n",
-    "        allocated_items.append(sorted_bidders[j][0])\n",
+    "        winners.append(sorted_bidders[j][0])\n",
     "        allocation[sorted_bidders[j][0]] = True\n",
     "\n",
     "    #computing social welfare\n",
     "    social_welfare = 0\n",
     "    for i in range(k):\n",
-    "        social_welfare += items[i] * bids[allocated_items[i]][i]\n",
+    "        social_welfare += items[i] * bids[winners[i]][i]\n",
     "\n",
     "    print(social_welfare)\n",
     "\n",
     "    return allocation, payments\n",
     "\n",
-    "def allocation(k, bids):\n",
-    "    # initialization\n",
-    "    allocation = {}\n",
-    "    for bidder in bids:\n",
-    "        allocation[bidder] = False\n",
-    "\n",
-    "    for x in range(k):\n",
-    "        winner = list(bids)[0]\n",
-    "        for bidder in bids:\n",
-    "            if bids[bidder][x] > bids[winner][x]:\n",
-    "                winner = bidder\n",
-    "        allocation[winner] = True\n",
-    "\n",
-    "    return allocation\n",
-    "\n",
-    "\n",
     "def vcg():\n",
     "    pass\n",
     "\n",
+    "def data_init():\n",
+    "    seller_net = []\n",
+    "    reports = {}\n",
+    "    file = open(\"musae_facebook_edges.csv\", \"r\")\n",
+    "    file.readline()\n",
+    "    for line in file:\n",
+    "        modified = line.strip(\"\\n\")\n",
+    "        splited = modified.split(\",\")\n",
+    "        if not splited[0] in seller_net:\n",
+    "            seller_net.append(splited[0])\n",
+    "            reports[splited[0]] = []\n",
+    "        reports[splited[0]].append(splited[1])\n",
+    "    file.close()\n",
+    "    print(seller_net)\n",
+    "    print(reports)\n",
+    "    return seller_net, reports\n",
+    "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
+    "    data_init()\n",
     "    k = 10\n",
     "    seller_net = [\"player \" + str(x) for x in range(1, 11)]\n",
     "    # keys inentifying bidder,\n",
