--- a/midterm/main.ipynb
+++ b/midterm/main.ipynb
@@ -286,6 +286,7 @@
    "source": [
     "# Task 3\n",
     "import random\n",
+    "from queue import Queue\n",
     "\n",
     "\n",
     "def auction(k, seller_net, reports, bids, type='vcg'):\n",
@@ -312,7 +313,7 @@
     "submitted a bid, and as value the price that she pays. Here, a positive price means that the bidder\n",
     "is paying to the seller, while a negative price means that the seller is paying to the bidder.\n",
     "    \"\"\"\n",
-    "    payments = dict()\n",
+    "    payments = {}\n",
     "\n",
     "    items = []\n",
     "    winners = []\n",
@@ -323,6 +324,7 @@
     "    allocation = {}\n",
     "    for bidder in bids:\n",
     "        allocation[bidder] = False\n",
+    "        payments[bidder] = 0\n",
     "\n",
     "    for p in bids:\n",
     "        bids[p] = [random.randint(0, 100) for x in range(k)]\n",
@@ -336,6 +338,30 @@
     "        winners.append(sorted_bidders[j][0])\n",
     "        allocation[sorted_bidders[j][0]] = True\n",
     "\n",
+    "    #bfs - measuring distance\n",
+    "    start = random.randint(0, len(seller_net) - 1)\n",
+    "    auction = 0\n",
+    "    for winner in winners:\n",
+    "        distance = {}\n",
+    "        for seller in seller_net:\n",
+    "            distance[seller] = -1\n",
+    "        queue = Queue()\n",
+    "        queue.put(seller_net[start])\n",
+    "        distance[seller_net[start]] = 0\n",
+    "        while queue:\n",
+    "            vertex = queue.get()\n",
+    "            if vertex == winner:\n",
+    "                distance[winner] = distance[vertex] + 1\n",
+    "                payments[winner] = bids[winner][auction] - distance[winner]\n",
+    "                print(distance)\n",
+    "                break\n",
+    "            link = reports[vertex]\n",
+    "            for l in link:\n",
+    "                if distance[l] == -1:\n",
+    "                    distance[l] = distance[vertex] + 1\n",
+    "                    queue.put(l)\n",
+    "        auction += 1\n",
+    "\n",
     "    #computing social welfare\n",
     "    social_welfare = 0\n",
     "    for i in range(k):\n",
@@ -343,6 +369,8 @@
     "\n",
     "    print(social_welfare)\n",
     "\n",
+    "    print(allocation)\n",
+    "    print(payments)\n",
     "    return allocation, payments\n",
     "\n",
     "def vcg():\n",
@@ -367,7 +395,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    data_init()\n",
+    "    #data_init()\n",
     "    k = 10\n",
     "    seller_net = [\"player \" + str(x) for x in range(1, 11)]\n",
     "    # keys inentifying bidder,\n",
