--- a/final/task2.ipynb
+++ b/final/task2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +38,15 @@
     "        for edge in self.G.edges():\n",
     "            node1, node2 = edge\n",
     "\n",
-    "        # Add node2 to the reports of node1\n",
-    "        if node1 not in self.reports:\n",
-    "            self.reports[node1] = set()\n",
-    "        self.reports[node1].add(node2)\n",
+    "            # Add node2 to the reports of node1\n",
+    "            if node1 not in self.reports:\n",
+    "                self.reports[node1] = set()\n",
+    "            self.reports[node1].add(node2)\n",
     "\n",
-    "        # Add node1 to the reports of node2\n",
-    "        if node2 not in self.reports:\n",
-    "            self.reports[node2] = set()\n",
-    "        self.reports[node2].add(node1)\n",
+    "            # Add node1 to the reports of node2\n",
+    "            if node2 not in self.reports:\n",
+    "                self.reports[node2] = set()\n",
+    "            self.reports[node2].add(node1)\n",
     "\n",
     "    def choose_auction_format(self, t):\n",
     "        if t % 2 == 0: return self.vcg_auction \n",
@@ -59,7 +59,7 @@
     "        for u in self.G.nodes:\n",
     "            if u != s:\n",
     "                # Call the valuation oracle (val) to get the bid for bidder u\n",
-    "                bid = val(u)\n",
+    "                bid = val(t,u)\n",
     "                bids[u] = bid  # Store the bid in the bids dictionary\n",
     "                self.__invite(t, s, u, auction, prob, val)\n",
     "\n",
@@ -146,22 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "valf() missing 1 required positional argument: 'u'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 43\u001b[0m\n\u001b[1;32m     41\u001b[0m revenue \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     42\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(T):\n\u001b[0;32m---> 43\u001b[0m     revenue \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m snm\u001b[39m.\u001b[39;49mrun(step, prob, valf)\n\u001b[1;32m     44\u001b[0m     \u001b[39mprint\u001b[39m(revenue)\n\u001b[1;32m     46\u001b[0m \u001b[39mprint\u001b[39m(revenue)\n",
-      "Cell \u001b[0;32mIn[6], line 55\u001b[0m, in \u001b[0;36mSocNetMec.run\u001b[0;34m(self, t, prob, val)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[39mfor\u001b[39;00m u \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG\u001b[39m.\u001b[39mnodes:\n\u001b[1;32m     53\u001b[0m     \u001b[39mif\u001b[39;00m u \u001b[39m!=\u001b[39m s:\n\u001b[1;32m     54\u001b[0m         \u001b[39m# Call the valuation oracle (val) to get the bid for bidder u\u001b[39;00m\n\u001b[0;32m---> 55\u001b[0m         bid \u001b[39m=\u001b[39m val(u)\n\u001b[1;32m     56\u001b[0m         bids[u] \u001b[39m=\u001b[39m bid  \u001b[39m# Store the bid in the bids dictionary\u001b[39;00m\n\u001b[1;32m     57\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__invite(t, s, u, auction, prob, val)\n",
-      "\u001b[0;31mTypeError\u001b[0m: valf() missing 1 required positional argument: 'u'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -174,7 +161,7 @@
     "        for s in f.readlines():\n",
     "            G.add_edge(s.split()[0], s.split()[1])\n",
     "    k = 5\n",
-    "    T = 5000\n",
+    "    T = 50\n",
     "\n",
     "    #for the oracle val\n",
     "    val = dict()\n",
@@ -187,7 +174,7 @@
     "    p = dict()\n",
     "    for u in G.nodes():\n",
     "        p[u] = dict()\n",
-    "    for u in G.nodes():\n",
+    "    for u in p:\n",
     "        for v in G[u]:\n",
     "            if v not in p[u]:\n",
     "                t=min(0.25, 2/max(G.degree(u), G.degree(v)))\n",
@@ -204,7 +191,30 @@
     "def valf(t, u):\n",
     "    return val[t][u]\n",
     "\n",
-    "G, k, T, val, p = input_data()\n",
+    "G, k, T, val, p = input_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m revenue \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(T):\n\u001b[0;32m----> 4\u001b[0m     revenue \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m snm\u001b[39m.\u001b[39;49mrun(step, prob, valf)\n\u001b[1;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(revenue)\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(revenue)\n",
+      "Cell \u001b[0;32mIn[9], line 56\u001b[0m, in \u001b[0;36mSocNetMec.run\u001b[0;34m(self, t, prob, val)\u001b[0m\n\u001b[1;32m     54\u001b[0m         bid \u001b[39m=\u001b[39m val(t,u)\n\u001b[1;32m     55\u001b[0m         bids[u] \u001b[39m=\u001b[39m bid  \u001b[39m# Store the bid in the bids dictionary\u001b[39;00m\n\u001b[0;32m---> 56\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__invite(t, s, u, auction, prob, val)\n\u001b[1;32m     58\u001b[0m allocation, payments \u001b[39m=\u001b[39m auction(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mk, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG\u001b[39m.\u001b[39mnodes, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreports, bids)\n\u001b[1;32m     60\u001b[0m \u001b[39mfor\u001b[39;00m bidder, payment \u001b[39min\u001b[39;00m payments\u001b[39m.\u001b[39mitems():\n",
+      "Cell \u001b[0;32mIn[9], line 21\u001b[0m, in \u001b[0;36mSocNetMec.__invite\u001b[0;34m(self, t, u, v, auction, prob, val)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__invite\u001b[39m(\u001b[39mself\u001b[39m, t, u, v, auction, prob, val):\n\u001b[0;32m---> 21\u001b[0m     \u001b[39mif\u001b[39;00m prob(u, v):\n\u001b[1;32m     22\u001b[0m         truthful_val \u001b[39m=\u001b[39m val(t, v)\n\u001b[1;32m     23\u001b[0m         bv \u001b[39m=\u001b[39m truthful_val \u001b[39mif\u001b[39;00m auction \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvcg_auction \u001b[39melse\u001b[39;00m random\u001b[39m.\u001b[39muniform(\u001b[39m2\u001b[39m\u001b[39m/\u001b[39m\u001b[39m3\u001b[39m \u001b[39m*\u001b[39m truthful_val, truthful_val)\n",
+      "Cell \u001b[0;32mIn[10], line 32\u001b[0m, in \u001b[0;36mprob\u001b[0;34m(u, v)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprob\u001b[39m(u, v):\n\u001b[1;32m     31\u001b[0m     r \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandom()\n\u001b[0;32m---> 32\u001b[0m     \u001b[39mif\u001b[39;00m r \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m p[u][v]:\n\u001b[1;32m     33\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     34\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[0;31mKeyError\u001b[0m: '0'"
+     ]
+    }
+   ],
+   "source": [
     "snm=SocNetMec(G, k, T)\n",
     "revenue = 0\n",
     "for step in range(T):\n",
