--- a/final/task2.ipynb
+++ b/final/task2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,6 @@
     "        self.k = k\n",
     "        self.reports = {}\n",
     "        self.get_reports()\n",
-    "        \n",
     "\n",
     "\n",
     "    def __init(self, t):\n",
@@ -25,6 +24,14 @@
     "        auction = self.choose_auction_format(t)\n",
     "        return u, auction\n",
     "\n",
+    "    \"\"\"\n",
+    "    Atributes:\n",
+    "    t: time step\n",
+    "    u: inviting node\n",
+    "    v: invited node\n",
+    "    auction: function of auction\n",
+    "    prob: probability function\n",
+    "    \"\"\"\n",
     "    def __invite(self, t, u, v, auction, prob, val):\n",
     "        if prob(u, v):\n",
     "            truthful_val = val(t, v)\n",
@@ -49,13 +56,16 @@
     "            self.reports[node2].add(node1)\n",
     "\n",
     "    def choose_auction_format(self, t):\n",
-    "        if t % 2 == 0: return self.vcg_auction \n",
+    "        if t % 3 == 0: return self.vcg_auction\n",
+    "        elif t % 3 == 1: return self.mudan_auction\n",
     "        else: return self.mudar_auction\n",
     "\n",
     "    def run(self, t, prob, val):\n",
     "        s, auction = self.__init(t)\n",
     "        revenue = 0\n",
     "        bids = {}\n",
+    "        for neighbour in self.select_neighbors(s):\n",
+    "            self.__invite(t, s, neighbour, auction, prob, val)\n",
     "        for u in self.G.nodes:\n",
     "            if u != s:\n",
     "                # Call the valuation oracle (val) to get the bid for bidder u\n",
@@ -139,6 +149,9 @@
     "        # Step 2: Calculate Random Payments\n",
     "        payments = {bidder: -bids[bidder] if allocation[bidder] else 0 for bidder in seller_net}\n",
     "\n",
+    "        # Step 3: Apply Neighbor Externalities\n",
+    "\n",
+    "\n",
     "        return allocation, payments\n",
     "\n",
     "\n"
@@ -188,7 +201,7 @@
     "        return True\n",
     "    return False\n",
     "\n",
-    "def valf(t, u):\n",
+    "def val(t, u):\n",
     "    return val[t][u]\n",
     "\n",
     "G, k, T, val, p = input_data()\n"
@@ -204,13 +217,13 @@
      "evalue": "'0'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m revenue \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(T):\n\u001b[0;32m----> 4\u001b[0m     revenue \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m snm\u001b[39m.\u001b[39;49mrun(step, prob, valf)\n\u001b[1;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(revenue)\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(revenue)\n",
-      "Cell \u001b[0;32mIn[9], line 56\u001b[0m, in \u001b[0;36mSocNetMec.run\u001b[0;34m(self, t, prob, val)\u001b[0m\n\u001b[1;32m     54\u001b[0m         bid \u001b[39m=\u001b[39m val(t,u)\n\u001b[1;32m     55\u001b[0m         bids[u] \u001b[39m=\u001b[39m bid  \u001b[39m# Store the bid in the bids dictionary\u001b[39;00m\n\u001b[0;32m---> 56\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__invite(t, s, u, auction, prob, val)\n\u001b[1;32m     58\u001b[0m allocation, payments \u001b[39m=\u001b[39m auction(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mk, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG\u001b[39m.\u001b[39mnodes, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreports, bids)\n\u001b[1;32m     60\u001b[0m \u001b[39mfor\u001b[39;00m bidder, payment \u001b[39min\u001b[39;00m payments\u001b[39m.\u001b[39mitems():\n",
-      "Cell \u001b[0;32mIn[9], line 21\u001b[0m, in \u001b[0;36mSocNetMec.__invite\u001b[0;34m(self, t, u, v, auction, prob, val)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__invite\u001b[39m(\u001b[39mself\u001b[39m, t, u, v, auction, prob, val):\n\u001b[0;32m---> 21\u001b[0m     \u001b[39mif\u001b[39;00m prob(u, v):\n\u001b[1;32m     22\u001b[0m         truthful_val \u001b[39m=\u001b[39m val(t, v)\n\u001b[1;32m     23\u001b[0m         bv \u001b[39m=\u001b[39m truthful_val \u001b[39mif\u001b[39;00m auction \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvcg_auction \u001b[39melse\u001b[39;00m random\u001b[39m.\u001b[39muniform(\u001b[39m2\u001b[39m\u001b[39m/\u001b[39m\u001b[39m3\u001b[39m \u001b[39m*\u001b[39m truthful_val, truthful_val)\n",
-      "Cell \u001b[0;32mIn[10], line 32\u001b[0m, in \u001b[0;36mprob\u001b[0;34m(u, v)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprob\u001b[39m(u, v):\n\u001b[1;32m     31\u001b[0m     r \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mrandom()\n\u001b[0;32m---> 32\u001b[0m     \u001b[39mif\u001b[39;00m r \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m p[u][v]:\n\u001b[1;32m     33\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     34\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: '0'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[11], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m revenue \u001B[39m=\u001B[39m \u001B[39m0\u001B[39m\n\u001B[1;32m      3\u001B[0m \u001B[39mfor\u001B[39;00m step \u001B[39min\u001B[39;00m \u001B[39mrange\u001B[39m(T):\n\u001B[0;32m----> 4\u001B[0m     revenue \u001B[39m+\u001B[39m\u001B[39m=\u001B[39m snm\u001B[39m.\u001B[39;49mrun(step, prob, valf)\n\u001B[1;32m      5\u001B[0m     \u001B[39mprint\u001B[39m(revenue)\n\u001B[1;32m      7\u001B[0m \u001B[39mprint\u001B[39m(revenue)\n",
+      "Cell \u001B[0;32mIn[9], line 56\u001B[0m, in \u001B[0;36mSocNetMec.run\u001B[0;34m(self, t, prob, val)\u001B[0m\n\u001B[1;32m     54\u001B[0m         bid \u001B[39m=\u001B[39m val(t,u)\n\u001B[1;32m     55\u001B[0m         bids[u] \u001B[39m=\u001B[39m bid  \u001B[39m# Store the bid in the bids dictionary\u001B[39;00m\n\u001B[0;32m---> 56\u001B[0m         \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49m__invite(t, s, u, auction, prob, val)\n\u001B[1;32m     58\u001B[0m allocation, payments \u001B[39m=\u001B[39m auction(\u001B[39mself\u001B[39m\u001B[39m.\u001B[39mk, \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mG\u001B[39m.\u001B[39mnodes, \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mreports, bids)\n\u001B[1;32m     60\u001B[0m \u001B[39mfor\u001B[39;00m bidder, payment \u001B[39min\u001B[39;00m payments\u001B[39m.\u001B[39mitems():\n",
+      "Cell \u001B[0;32mIn[9], line 21\u001B[0m, in \u001B[0;36mSocNetMec.__invite\u001B[0;34m(self, t, u, v, auction, prob, val)\u001B[0m\n\u001B[1;32m     20\u001B[0m \u001B[39mdef\u001B[39;00m \u001B[39m__invite\u001B[39m(\u001B[39mself\u001B[39m, t, u, v, auction, prob, val):\n\u001B[0;32m---> 21\u001B[0m     \u001B[39mif\u001B[39;00m prob(u, v):\n\u001B[1;32m     22\u001B[0m         truthful_val \u001B[39m=\u001B[39m val(t, v)\n\u001B[1;32m     23\u001B[0m         bv \u001B[39m=\u001B[39m truthful_val \u001B[39mif\u001B[39;00m auction \u001B[39m==\u001B[39m \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mvcg_auction \u001B[39melse\u001B[39;00m random\u001B[39m.\u001B[39muniform(\u001B[39m2\u001B[39m\u001B[39m/\u001B[39m\u001B[39m3\u001B[39m \u001B[39m*\u001B[39m truthful_val, truthful_val)\n",
+      "Cell \u001B[0;32mIn[10], line 32\u001B[0m, in \u001B[0;36mprob\u001B[0;34m(u, v)\u001B[0m\n\u001B[1;32m     30\u001B[0m \u001B[39mdef\u001B[39;00m \u001B[39mprob\u001B[39m(u, v):\n\u001B[1;32m     31\u001B[0m     r \u001B[39m=\u001B[39m random\u001B[39m.\u001B[39mrandom()\n\u001B[0;32m---> 32\u001B[0m     \u001B[39mif\u001B[39;00m r \u001B[39m<\u001B[39m\u001B[39m=\u001B[39m p[u][v]:\n\u001B[1;32m     33\u001B[0m         \u001B[39mreturn\u001B[39;00m \u001B[39mTrue\u001B[39;00m\n\u001B[1;32m     34\u001B[0m     \u001B[39mreturn\u001B[39;00m \u001B[39mFalse\u001B[39;00m\n",
+      "\u001B[0;31mKeyError\u001B[0m: '0'"
      ]
     }
    ],
